[package]
name = "sp1-stark-verifier-wasm"
version = "0.1.0"
edition = "2021"
description = "SP1 STARK Verifier compiled to WebAssembly"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sp1-stark        = "4.2.1"
sp1-core-machine = { version = "4.2.1", default-features = false }
sp1-core-executor = "4.2.1"
wasm-bindgen     = "0.2"
bincode          = "1.3"
getrandom        = { version = "0.2", features = ["js"] }

[patch.crates-io]
sp1-core-machine  = { path = "vendor/sp1-core-machine" }
sp1-core-executor = { path = "vendor/sp1-core-executor" }













